[gd_scene load_steps=3 format=3 uid="uid://bwcs47owte5ef"]

[ext_resource type="Script" uid="uid://b5cfjitbvkuul" path="res://scenes/ui/main_menu/main_menu.gd" id="1_1ch07"]
[ext_resource type="PackedScene" uid="uid://daxd3e0ew2exd" path="res://scenes/ui/sound_button/sound_button.tscn" id="2_e8t4i"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_1ch07")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Alien Cafe"

[node name="PlayButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_e8t4i")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="OptionsButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_e8t4i")]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="QuitGameButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_e8t4i")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
